feat: [#7] add google auth and refactor user controller and service