@@ -3,9 +3,9 @@ package com.communifilm.controllers;
 import com.communifilm.dtos.MovieDto;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.web.bind.annotation.*;
-import reactor.core.publisher.Mono;
 import com.communifilm.services.MovieService;
 
+import java.util.Collections;
 import java.util.List;
 
 @RestController
@@ -20,11 +20,10 @@ public class MovieController {
     }
 
     @GetMapping
-    public Mono<List<MovieDto>> getTrendy(@RequestParam(required = false, defaultValue = "false") boolean trending) {
+    public List<MovieDto> getTrendy(@RequestParam(required = false, defaultValue = "false") boolean trending) {
         if (trending) {
             return movieService.getTrendy();
         }
-        return Mono.just(List.of()); // return empty list wrapped in a Mono
+        return Collections.emptyList();
     }
 }
-
